[package]
name = "toursql"
version = "0.1.0"
edition = "2021"
authors = ["tabshi<tabshi@outlook.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/enginefuture/Toursql"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = "1.0"
quote = "1.0"
uuid = {version = "1.3.0" ,features = ["v4"]}
chrono = "0.4.19"
regex = "1.7.1"
proc-macro2 = "1.0"
gluesql = "0.13.1"
serde_json = "1"
[lib]
proc-macro = true




  