[workspace]
resolver = "2"
members = ["tourin-derive", "tourin-db"]

[workspace.package]
authors = ["tabshi <tabshi@outlook.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/poem/"
homepage = "https://github.com/enginefuture/Toursql"
repository = "https://github.com/enginefuture/Toursql"

[workspace.dependencies]
tourin-derive = { path = "tourin-derive", version = "1.0.0" }
tourin-db = { path = "tourin-db", version = "1.0.0" }
proc-macro-crate = "3.0.0"
proc-macro2 = "1.0.29"
quote = "1.0.9"
syn = { version = "2.0" }
tokio = "1.17.0"
serde_json = "1.0.68"
serde = { version = "1.0.130", features = ["derive"] }
thiserror = "1.0.30"
regex = "1.5.5"
mime = "0.3.16"
tracing = "0.1.36"
chrono = { version = "0.4.31", default-features = false }
bytes = "1.1.0"
futures-util = "0.3.17"
tokio-stream = "0.1.8"
serde_yaml = "0.9"
quick-xml = { version = "0.31.0", features = ["serialize"] }
base64 = "0.21.0"
serde_urlencoded = "0.7.1"
indexmap = "2.0.0"
reqwest = { version = "0.11.23", default-features = false }
uuid = { version = "1.3.0", features = ["v4"] }
gluesql = "0.15.0"
# rustls, update together
snowflaked = "1.0.2"
tokio-rustls = "0.25.0"
warp = "0.3"
lazy_static = "1.4.0"
anyhow = "1.0.44"
