[package]
name = "test-suite"
version = "1.0.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
description = "test-suites for tourinsql"

[dependencies]
tourin-derive.workspace = true
tourin-db.workspace = true
warp.workspace = true
gluesql.workspace = true
lazy_static.workspace = true
tokio.workspace = true
serde.workspace = true
[dependencies-dev]
warp.workspace = true
tourin-derive.workspace = true
tourin-db.workspace = true
tokio.workspace = true
