[package]
name = "tourin-db"
version = "1.0.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
description = "sql for tourinsql"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gluesql.workspace = true
lazy_static.workspace = true
serde_json.workspace = true
serde.workspace = true
snowflaked.workspace = true
anyhow.workspace = true
