[package]
name = "tourin-derive"
version = "1.0.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Macros for tourinsql"


[lib]
proc-macro = true

[dependencies]
proc-macro-crate.workspace = true
proc-macro2.workspace = true
quote.workspace = true
syn = { workspace = true, features = ["full"] }
uuid.workspace = true
chrono.workspace = true
regex.workspace = true
gluesql.workspace = true
serde_json.workspace = true
